fixed sizing on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,7 +14,7 @@ body{
 }
 
 section{
-  margin: 5% 0;
+  margin: 7.5% 0;
 }
   section.name{
     margin: 0;
@@ -76,7 +76,7 @@ a{
 
 ul{
   margin: 0 auto;
-  padding-top: 5%;
+  padding-top: 7.5%;
 }
 
 ul li{
